fixed mobile padding

--- a/layouts/shortcodes/gallery.html
+++ b/layouts/shortcodes/gallery.html
@@ -72,12 +72,13 @@
     width: 100%;
     padding: {{ $gap }}px;
     break-inside: avoid;
+    margin-left: 0;
   }
   .gallery-item img {
     width: 100%;
     height: auto;
     cursor: pointer;
-      margin-bottom: -{{ $margin }}px;
+    margin-bottom: -{{ $margin }}px;
   }
 
 
